search feature works

--- a/Spotify Hit Predictor.ipynb
+++ b/Spotify Hit Predictor.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "4  153.166       430653               4    25.57331        20       0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,16 +514,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x118716128>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11e423910>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -547,16 +547,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x118e98128>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x120f319a0>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -579,16 +579,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x118f80240>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x120d4ca00>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
        "max        0.996000    241.423000  4.170227e+06        5.000000      1.000000  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,24 +950,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Accuracy: 0.6562601362309439\n"
+      "Logistic Regression Accuracy: 0.49975673045734675\n"
      ]
     }
    ],
@@ -982,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,24 +1066,73 @@
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "\n",
     "# Set up OAuth\n",
-    "def oauth_login():\n",
-    "    cid = '{client_id}'\n",
-    "    secret = '{client_secret}'\n",
-    "    client_credentials_manager = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
-    "    sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)\n",
-    "    return sp"
+    "# def oauth_login():\n",
+    "cid = '79a312d585674869b52ad09f3ec4409d'\n",
+    "secret = '43adec24325b4ad7bc190d719f9de173'\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
+    "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)\n",
+    "# return sp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "benee supalonely\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyrebase\n",
+    "\n",
+    "config = {\n",
+    "  \"apiKey\": \"AIzaSyA5Z1FcOg_OdeFsNcFWOcWZQo_yTrlzn7o\",\n",
+    "  \"authDomain\": \"spotify-data-science.firebaseapp.com\",\n",
+    "  \"databaseURL\": \"https://spotify-data-science.firebaseio.com\",\n",
+    "  \"projectId\": \"spotify-data-science\",\n",
+    "  \"storageBucket\": \"spotify-data-science.appspot.com\",\n",
+    "  \"messagingSenderId\": \"34593205335\",\n",
+    "  \"appId\": \"1:34593205335:web:6ee9ac5ed04d589fcd8712\",\n",
+    "  \"measurementId\": \"G-ZWJSWWP8BP\"\n",
+    "}\n",
+    "\n",
+    "firebase = pyrebase.initialize_app(config)\n",
+    "\n",
+    "# Get a reference to the auth service\n",
+    "auth = firebase.auth()\n",
+    "\n",
+    "# Get a reference to the database service\n",
+    "db = firebase.database()\n",
+    "\n",
+    "song_data = db.child(\"Song\").get()\n",
+    "song_data_dict = song_data.val()\n",
+    "\n",
+    "\n",
+    "\n",
+    "artist = song_data_dict['artistName']\n",
+    "song = song_data_dict['songName']\n",
+    "\n",
+    "print(artist, song)\n",
+    "print(type(artist))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_audio_features():\n",
-    "    sp = oauth_login()\n",
-    "    artist = 'benee'\n",
-    "    track = 'supalonely'\n",
+    "    # sp = oauth_login()\n",
+    "    artist = song_data_dict['artistName']\n",
+    "    track = song_data_dict['songName']\n",
     "\n",
     "    # search for the artist and track\n",
     "    result = sp.search(q='artist:' + artist + ' track:' + track, type='track')\n",
@@ -1105,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1214,7 @@
        "0           0.00003     0.123    0.817  128.977       223480               4  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,19 +1233,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.19377545 0.80622455]]\n"
+      "80.62\n",
+      "supalonely by benee has a 80.62 % chance of being a hit.\n"
      ]
     }
    ],
    "source": [
     "def predict():\n",
+    "    artist = song_data_dict['artistName']\n",
+    "    track = song_data_dict['songName']\n",
+    "    \n",
     "    # get the audio features of the new input song\n",
     "    new_input = make_DF()\n",
     "    \n",
@@ -1212,7 +1257,10 @@
     "    RF_predict = random_forest_clf.predict_proba(new_input)\n",
     "    \n",
     "    # the first number is likelihood of flop, the second number is likelihood of hit\n",
-    "    print(RF_predict)\n",
+    "\n",
+    "    flat = RF_predict.flatten()\n",
+    "    percentage = str(round(flat[1] * 100, 2))\n",
+    "    print(track, \"by\", artist, \"has a\", percentage, \"% chance of being a hit.\")\n",
     "\n",
     "predict() "
    ]
@@ -1227,9 +1275,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.0 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python38064bit73cd9e29f4454cc39fcd00691da475b7"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1241,7 +1289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
